--- a/public/sass/views/_flux-monitor.scss
+++ b/public/sass/views/_flux-monitor.scss
@@ -277,6 +277,9 @@
                 width: 50%;
                 height: 20px;
             }
+            .time-left {
+                width: 50%;
+            }
         }
         .actions {
             position: absolute;
